# BMEdit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
BMEdit/Editor/: CMakeLists.txt  README.md
BMEdit/Editor/Include/Delegates/: ScenePropertyTypeDelegate.h  TypePropertyItemDelegate.h
BMEdit/Editor/Include/Editor/: EditorInstance.h  PropertyAsStringRepr.h  TextureProcessor.h  ZIPLevelAssetProvider.h
BMEdit/Editor/Include/Factory/: IWidgetSelectorStrategy.h  TypePresentationWidgetFactory.h  Vector3DWidgetSelectorStrategy.h
BMEdit/Editor/Include/IO/: ZIPLevelAssetProvider.h
BMEdit/Editor/Include/Items/: ObjectPropertyItem.h
BMEdit/Editor/Include/Models/: GeomControllerListModel.h  SceneFilterModel.h  SceneObjectControllerModel.h  SceneObjectPropertiesModel.h  SceneObjectsTreeModel.h  ScenePrimitivesFilterModel.h  ScenePrimitivesModel.h  ScenePropertiesModel.h  SceneTextureFilterModel.h  SceneTexturesModel.h  TypePropertiesDataModel.h  ValueModelBase.h
BMEdit/Editor/Include/Render/: Camera.h  Frustum.h  GLResource.h  GlacierVertex.h  Model.h  RenderEntry.h  RenderTopology.h  Shader.h  ShaderConstants.h  Texture.h  VertexFormatDescription.h
BMEdit/Editor/Include/Types/: QCustomRoles.h  QGlacierController.h  QGlacierValue.h  QPrimType.h  QSceneProperty.h  QTextureREF.h
BMEdit/Editor/Include/Utils/: TSpinboxFactory.hpp
BMEdit/Editor/Include/Widgets/: GeomControllersWidget.h  PrimitivePreviewWidget.h  ScenePropertyWidget.h  SceneRenderWidget.h  SceneTreeView.h  TypeMatrixPropertyWidget.h  TypePropertyWidget.h  TypeRefTabPropertyWidget.h  TypeSimplePropertyWidget.h  TypeVector3PropertyWidget.h
BMEdit/Editor/Resources/: BMEdit.qrc
BMEdit/Editor/Resources/Shaders/: ColoredEntity_GL33.fsh  ColoredEntity_GL33.vsh  TexturedEntity_GL33.fsh  TexturedEntity_GL33.vsh
BMEdit/Editor/Source/Delegates/: ScenePropertyTypeDelegate.cpp  TypePropertyItemDelegate.cpp
BMEdit/Editor/Source/Edtor/: EditorInstance.cpp  PropertyAsStringRepr.cpp  TextureProcessor.cpp  ZIPLevelAssetProvider.cpp
BMEdit/Editor/Source/Factory/: TypePresentationWidgetFactory.cpp  Vector3DWidgetSelectorStrategy.cpp
BMEdit/Editor/Source/IO/: ZIPLevelAssetProvider.cpp
BMEdit/Editor/Source/Items/: ObjectPropertyItem.cpp
BMEdit/Editor/Source/Models/: GeomControllerListModel.cpp  SceneFilterModel.cpp  SceneObjectControllerModel.cpp  SceneObjectPropertiesModel.cpp  SceneObjectsTreeModel.cpp  ScenePrimitivesFilterModel.cpp  ScenePrimitivesModel.cpp  ScenePropertiesModel.cpp  SceneTextureFilterModel.cpp  SceneTexturesModel.cpp  TypePropertiesDataModel.cpp  ValueModelBase.cpp
BMEdit/Editor/Source/Render/: Camera.cpp  GlacierVertex.cpp  Model.cpp  Shader.cpp  Texture.cpp  VertexFormatDescription.cpp
BMEdit/Editor/Source/Types/: QGlacierValue.cpp
BMEdit/Editor/Source/Widgets/: GeomControllersWidget.cpp  PrimitivePreviewWidget.cpp  ScenePropertyWidget.cpp  SceneRenderWidget.cpp  SceneTreeView.cpp  TypeMatrixPropertyWidget.cpp  TypePropertyWidget.cpp  TypeRefTabPropertyWidget.cpp  TypeSimplePropertyWidget.cpp  TypeVector3PropertyWidget.cpp
BMEdit/Editor/UI/Include/: BMEditMainWindow.h  ImportTextureDialog.h  LoadSceneProgressDialog.h  TypeViewerWindow.h  ViewTexturesDialog.h
BMEdit/Editor/UI/Source/: BMEditMainWindow.cpp  ImportTextureDialog.cpp  LoadSceneProgressDialog.cpp  TypeViewerWindow.cpp  ViewTexturesDialog.cpp
BMEdit/Editor/UI/UI/: BMEditMainWindow.ui  GeomControllersWidget.ui  ImportTextureDialog.ui  LoadSceneProgressDialog.ui  TypeViewerWindow.ui  ViewTexturesDialog.ui
BMEdit/GameLib/: CMakeLists.txt  README.md
BMEdit/GameLib/Include/GameLib/: BinaryReaderSeekScope.h  BoundingBox.h  FromBytes.h  GeomBasedTypeInfo.h  Level.h  NotImplemented.h  PRPBadInstruction.h  PRPBadStringReference.h  PRPByteCode.h  PRPByteCodeContext.h  PRPByteCodeHandlers.h  PRPDefinition.h  PRPException.h  PRPHeader.h  PRPInstruction.h  PRPOpCode.h  PRPOpCodeNotImplemented.h  PRPReader.h  PRPRegionID.h  PRPStructureError.h  PRPTokenTable.h  PRPWriter.h  PRPZDefines.h  Span.h  StringLiteral.h  Type.h  TypeAlias.h  TypeArray.h  TypeBitfield.h  TypeComplex.h  TypeContainer.h  TypeEnum.h  TypeFactory.h  TypeHint.h  TypeKind.h  TypeNotFoundException.h  TypeRawData.h  TypeRegistry.h  Value.h  ValueView.h  (+2 more)
BMEdit/GameLib/Include/GameLib/GMS/: GMS.h  GMSEntries.h  GMSGeomEntity.h  GMSGeomStats.h  GMSGroupClusterInfo.h  GMSGroupsCluster.h  GMSHeader.h  (+3 more)
BMEdit/GameLib/Source/GameLib/: BinaryReaderSeekScope.cpp  BoundingBox.cpp  GeomBasedTypeInfo.cpp  Level.cpp  NotImplemented.cpp  PRPByteCode.cpp  PRPByteCodeContext.cpp  PRPDefinition.cpp  PRPDefinitionType.cpp  PRPException.cpp  PRPHeader.cpp  PRPInstruction.cpp  PRPOpCode.cpp  PRPReader.cpp  PRPTokenTable.cpp  PRPWriter.cpp  PRPZDefines.cpp  Type.cpp  TypeAlias.cpp  TypeArray.cpp  TypeBitfield.cpp  TypeComplex.cpp  TypeContainer.cpp  TypeEnum.cpp  TypeFactory.cpp  TypeHint.cpp  TypeKind.cpp  TypeNotFoundException.cpp  TypeRawData.cpp  TypeRegistry.cpp  Value.cpp  ValueView.cpp  Vector3.cpp
BMEdit/GameLib/Tests/: CMakeLists.txt
BMEdit/GameLib/Tests/Source/: Entry.cpp  PRP.cpp  PRP_ComplexPack.cpp  PRP_Typing.cpp
BMEdit/GlacierTypeInfoLoader/: CMakeLists.txt
BMEdit/GlacierTypeInfoLoader/Include/GTIL/: GlacierTypeInfoLoader.h
BMEdit/GlacierTypeInfoLoader/Source/: GlacierTypeInfoLoader.cpp
BMRender/: CMakeLists.txt  README.md
BMRender/Assets/: glacier_fragment_common.fsh  glacier_vertex_common.vsh
BMRender/Include/BMRender/: BMRender.h  BufferDescription.h  Camera.h  ILogInterface.h  Logger.h  Mesh.h  RenderBase.h  RenderGL.h  RenderOptions.h  ShaderProgram.h  SimplePrimitiveRender.h
BMRender/Source/: BMRender.cpp  BufferDescription.cpp  Camera.cpp  Logger.cpp  Mesh.cpp  RenderBase.cpp  RenderGL.cpp  ShaderProgram.cpp  SimplePrimitiveRender.cpp
BMRenderSandbox/: CMakeLists.txt
BMRenderSandbox/Include/BMRenderSandbox/: SandboxLogger.h
BMRenderSandbox/Source/: Sandbox.cpp  SandboxLogger.cpp
BMRenderSandbox/UI/: SandboxMainWindow.cpp  SandboxMainWindow.h  SandboxMainWindow.ui  SceneViewWidget.cpp  SceneViewWidget.h
(+521 files in other folders)
